k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailmatrixai
  labels:
    app: mailmatrixai
spec:
  type: ClusterIP
  selector:
    app: mailmatrixai
  ports:
    - name: http
      port: 80
      targetPort: http
